# oh-my-autoresearch

./: .gitignore  CLAUDE.template.md  LICENSE  README.md  VERSION  bootstrap.sh  doctor.sh  install.sh  manifest.json  oh-my-autoresearch-architecture.md  oh-my-autoresearch.md  pyproject.toml  uninstall.sh  upgrade.sh
.claude.template/: CLAUDE.md  settings.json  settings.local.example.json
.claude.template/agents/: coder.md  flow-arch-reviewer.md  summarizer.md  (+3 more)
agents/: coder.md  flow-arch-reviewer.md  math-theorist.md  numerical-debugger.md  orthogonal-direction-scout.md  team-leader.md
agentteam/: team.md
docs/: agentteam_protocol.md  architecture.md  installation.md  lifecycle.md  loop_design.md  observer-plugin.md  repository_responsibility.md  runtime_contract.md  runtime_read_policy.md  schemas.md  scripts.md  state-machine.md  subagents.md  synchronization.md  team-lead.md  troubleshooting.md  workflow.md
manifests/: nn_architecture.yaml
prompts/: debate_protocol.md  experiment_review.md  global_system.md  memory_compaction.md  proposal_format.md
schemas/: best.schema.json  current_iteration.schema.json  experiment.schema.json  metrics.schema.json  objective.schema.json  phase_b_agentteam_output.schema.json  proposal.schema.json  state.schema.json  timeline.schema.json  val_loss.schema.json
scripts/: compact_memory.py  generate_next_iteration.py  install_runtime.py  runtime_manifest.py  score_proposals.py  sync_runtime.py  update_templates.py  validate_workflow.py
tests/: test_manifest_layout.py  test_runtime_scripts.py  test_subagent_supervisor.py
(+162 files in other folders)
